--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.560.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
