--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.560.0",
-    "next": "15.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^15.5.9",
+    "openai": "^6.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
